syntax = "proto3";

package pb;

import "google/api/annotations.proto";
import "rpc_create_user.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

option go_package = "github.com/mathemartins/fraudEngine/pb";

option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
    info: {
        title: "Fraud Engine API";
        version: "1.2";
        contact: {
            name: "Mathemartins";
            url: "https://github.com/mathemartins";
            email: "mathegeniuse@gmail.com";
        };
    };
};

service FraudEngine {
    rpc CreateUser (CreateUserRequest) returns (CreateUserResponse) {
        option (google.api.http) = {
            post: "/v1/create_user"
            body: "*"
        };
        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
            description: "Use this API to create a new user";
            summary: "Create new user";
        };
    }
}